fix(Progress): resolve circle type color error in dark mode (#2794)
* fix(Progress): resolve circle type color error in dark mode

* test: update snapshots

--- a/src/progress/progress.less
+++ b/src/progress/progress.less
@@ -45,6 +45,7 @@
 
 // 进度条基本样式
 .@{progress} {
+  --td-progress-inner-bg-color: @brand-color;
   --td-progress-track-bg-color: @bg-color-component;
 
   &__inner {
